# throttler

./: .gitignore  CMakeLists.txt  README.md  cnfMng.cpp  cnfMng.h  config.cnf  func.cpp  func.h  handleThread.cpp  handleThread.h  main.cpp  main.h  typedef.h
